# ViTPose-Pytorch

./: README.md  demo_infer.py  demo_pic.py  demo_pkg.py  export.py  general_utils.py  inference_yolov5.py  pose_utils.py  pyproject.toml  requirements.txt
builder/: __init__.py  model_builder.py
src/gpastal24.egg-info/: PKG-INFO  SOURCES.txt
src/vitpose_infer/: __init__.py  main.py  model_builder.py
src/vitpose_infer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vitpose_infer/builder/: __init__.py  model_builder.py
src/vitpose_infer/pose_utils/: general_utils.py  pose_utils.py
src/vitpose_infer/tracker/: byte_tracker.py
